--- a/CRM_APP/templates/customer_form.html
+++ b/CRM_APP/templates/customer_form.html
@@ -127,11 +127,11 @@
                 <nav aria-label="Global" class="hidden md:block">
                     <ul class="flex items-center gap-6 text-sm">
                         <li>
-                            <a class="text-white transition hover:text-gray-200" href=" {% url 'dashboard'%}"> Dashboard
+                            <a class="text-white font-bold transition hover:text-gray-200" href=" {% url 'dashboard'%}"> Dashboard
                             </a>
                         </li>
                         <li>
-                            <a class="text-white transition hover:text-gray-200" href="{% url 'customer_list'%}"> List
+                            <a class="text-white font-bold transition hover:text-gray-200" href="{% url 'customer_list'%}"> List
                                 all </a>
                         </li>
                     </ul>
@@ -151,7 +151,7 @@
             <div class="flex justify-center mt-4">
                
 
-                <button type="submit" class="btn">Button</button>
+                <button type="submit" class="btn">Submit</button>
 
             </div>
         </form>
