--- a/CRM_APP/templates/customer_list.html
+++ b/CRM_APP/templates/customer_list.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
+
 <body>
 
     <header class="bg-gray-800">
@@ -22,10 +26,12 @@
                     <nav aria-label="Global" class="hidden md:block">
                         <ul class="flex items-center gap-6 text-sm">
                             <li>
-                                <a class="text-white transition hover:text-gray-200" href=" {% url 'dashboard'%}"> Dashboard </a>
+                                <a class="text-white font-bold transition hover:text-gray-200"
+                                    href=" {% url 'dashboard'%}"> Dashboard </a>
                             </li>
                             <li>
-                                <a class="text-white transition hover:text-gray-200" href=" {% url 'customer_create'%}"> Add New </a>
+                                <a class="text-white font-bold transition hover:text-gray-200"
+                                    href=" {% url 'customer_create'%}"> Add New </a>
                             </li>
                         </ul>
                     </nav>
@@ -34,17 +40,17 @@
         </div>
     </header>
 
-
     <div class="shadow-lg rounded-lg overflow-hidden w-2/3 mx-auto mt-8  md:mx-10">
-        <table class="w-full table-fixed">
+
+        <table class="table-responsive w-full table-fixed">
             <thead>
                 <tr class="bg-black ">
-                    <th class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Name</th>
-                    <th class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Email</th>
-                    <th class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Phone</th>
-                    <th class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Actions</th>
-                    
-                    
+                    <th scope="col" class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Name</th>
+                    <th scope="col" class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Email</th>
+                    <th scope="col" class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Phone</th>
+                    <th scope="col" class="w-1/4 py-4 px-6 text-left text-white font-bold uppercase">Actions</th>
+
+
                 </tr>
             </thead>
             <tbody class="bg-white">
@@ -56,7 +62,7 @@
                     <td>
                         <a class="btn btn-warning" href="{% url 'customer_update' customer.id %}">Edit</a>
                         <a class="btn btn-danger" href="{% url 'customer_delete' customer.id %}">Delete</a>
-                    </td>   
+                    </td>
                 </tr>
                 {% endfor %}
 
@@ -65,6 +71,7 @@
             </tbody>
         </table>
     </div>
-    
+
 </body>
+
 </html>
